@@ -1,10 +1,15 @@
+2006-11-28  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * src/seahorse-keyserver-sync.c: Remove unnecessary warning when 
+    built without LDAP support. Fixes #374257
+
 2006-11-24  Nate Nielsen  <nielsen@memberwebs.com>
 
     * agent/seahorse-agent-ssh.c:
     * agent/seahorse-agent.c:
     * agent/seahorse-agent.h:
     * daemon/seahorse-daemon.c: Add option to seahorse-daemon to exec
-    another process once it forks.
+    another process once it forks. This allows chaining into startup.
 
 2006-11-23  Nate Nielsen  <nielsen@memberwebs.com>
 
